--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
     "nodemon": "^3.1.1",
+    "razorpay": "^2.9.4",
     "sequelize": "^6.37.3"
   }
 }
