--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.9.8",
     "nodemon": "^3.1.1",
     "razorpay": "^2.9.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
